# Multi-Agent-with-CrewAI

./: README.md  fix_env.sh  main.py  notes.md  pyproject.toml  requirements.txt
C1M1_Assignment/: C1M1_Assignment.ipynb  agents_automatic_code_review.py  agents_automatic_code_review_modular.py  code_changes.txt  results.dill  unittests.py  utils.py
C1M1_Assignment/agent_definitions/: security_engineer.md  senior_developer.md  tech_lead.md
C1M1_Assignment/task_definitions/: make_review_decision.md  review_security.md
Lab1/: C1M1_Lab_1_content_creation.ipynb  C1M1_Lab_1_content_creation.py  content_creation.py
Lab1/task_definitions/: create_shorts_plan.md
Lab2/: C1M1_Lab_2_automatic_deep_research.ipynb  C1M1_Lab_2_automatic_deep_research.py  automatic_deep_research.py  automatic_deep_research_modular.py
Lab2/agent_definitions/: research_planner.md
Lab2/task_definitions/: gather_research_data.md
modular_versions/agents_automatic_code_review/task_definitions/: analyze_code_quality.md
modular_versions/automatic_deep_research/agent_definitions/: fact_checker.md  report_writer.md  researcher.md
modular_versions/automatic_deep_research/task_definitions/: create_research_plan.md  verify_information_quality.md  write_final_report.md
modular_versions/content_creation/: content_creation_modular.py
modular_versions/content_creation/agent_definitions/: micro_history_strategist.md
