[project]
name = "design-develop-and-deploy-multi-agent-systems-with-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=1.9.3",
    "crewai-tools>=1.9.3",
    "patch>=1.16",
    "tools>=1.0.23",
    "exa-py>=2.3.0",
]
